<resources>
    <string name="app_name">SuperCloudMusicPlayerPP</string>
    <string name="Login">Login</string>
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Please enter a username and password to login</string>
    <string name="remember_me">Remember Me</string>
    <string name="info">Info</string>
    <string name="back">Back</string>
    <string name="playandpause">Play/Pause</string>
    <string name="donate">Donate</string>
    <string name="record_info">Record Info</string>
    <string name="record_info_title">Title: </string>
    <string name="record_info_artist">Artist: </string>
    <string name="record_info_Label">Label: </string>
    <string name="record_info_length">Length: </string>
</resources>