<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusicInfoActivity">

    <Button
        android:id="@+id/backToRecordPool"
        android:layout_width="94dp"
        android:layout_height="57dp"
        android:onClick="onBackButton"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="208dp"
        android:layout_height="56dp"
        android:layout_marginBottom="1dp"
        android:text="@string/record_info"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tableRecordInfo"
        app:layout_constraintStart_toEndOf="@+id/backToRecordPool" />

    <Button
        android:id="@+id/button2"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:text="@string/donate"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableRecordInfo"
        android:layout_width="206dp"
        android:layout_height="401dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backToRecordPool">

        <TableRow
            android:id="@+id/titleTableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_info_title" />

            <TextView
                android:id="@+id/recordTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>
        <TableRow
            android:id="@+id/artistTableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/artistLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_info_artist" />

            <TextView
                android:id="@+id/recordArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>
        <TableRow
            android:id="@+id/labelTableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/labelLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_info_Label" />

            <TextView
                android:id="@+id/recordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>
        <TableRow
            android:id="@+id/lengthTableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lengthLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_info_length" />

            <TextView
                android:id="@+id/recordLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="206dp"
        android:layout_height="403dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tableRecordInfo"
        app:layout_constraintTop_toBottomOf="@+id/backToRecordPool"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="136dp"
        android:layout_height="216dp"
        android:layout_marginStart="4dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRecordInfo"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="141dp"
        android:layout_height="216dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/tableRecordInfo"
        app:srcCompat="@android:drawable/ic_media_pause" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="129dp"
        android:layout_height="216dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@android:drawable/ic_media_next" />

</androidx.constraintlayout.widget.ConstraintLayout>